# HydroEngine

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  build.sh  config.ini
Components/: CMakeLists.txt  Register.cpp  Register.h
Components/Collectible/: CollectibleComponent.cpp  CollectibleComponent.h
Components/TestComponent/: TestComponent.cpp  TestComponent.h
Components/Transform/: Transform.cpp  Transform.h
Core/: CMakeLists.txt  README.md  build.sh
Core/include/Core/: Application.h  Camera.h  Debug.h  DemoScene.h  WindowManager.h
Core/include/Core/graphics/: Mesh.h
Core/include/Core/input/: InputManager.h
Core/res/shaders/: model.frag
Core/src/: CMakeLists.txt  Camera.cpp  DemoScene.cpp  Main.cpp  Mesh.cpp  Model.cpp  Texture.cpp  Triangle.cpp  VertexArray.cpp  WindowManager.cpp
Core/src/graphics/: IndexBuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
Core/src/include/: Mesh.h  Model.h  VertexArray.h  VertexBufferLayout.h
ECS/: CMakeLists.txt
ECS/include/ECS/: Component.h  ComponentManager.h  ComponentRegistry.h  GameObject.h  GameObject.inl  Scene.h  SceneManager.h  SerializedField.h
ECS/include/ECS/Components/: Transform.h
ECS/src/: Component.cpp  ComponentRegistry.cpp  GameObject.cpp  Scene.cpp  SceneManager.cpp  main.cpp
ECS/src/Components/: Transform.cpp
Editor/: CMakeLists.txt
Editor/src/: Console.cpp  DockLayout.cpp  ImGuiLayer.cpp  Interface.cpp  Preferences.cpp  Themes.cpp  main.cpp
Editor/src/Panels/Console/: ConsolePanel.cpp  ConsolePanel.h
Editor/src/Panels/GamePanel/: GamePanel.cpp  GamePanel.h
Editor/src/Panels/Inspector/: InspectorPanel.cpp  InspectorPanel.h
Editor/src/Panels/MenuBar/: MenuBar.cpp  MenuBar.h
Editor/src/Panels/Tree/: TreePanel.cpp  TreePanel.h
Editor/src/Popups/ComponentSelector/: ComponentSelectorPopup.cpp  ComponentSelectorPopup.h
Editor/src/Popups/Lighting/: LightingSettingsPopup.cpp  LightingSettingsPopup.h
Editor/src/include/: Colors.h  Console.h  DockLayout.h  ImGuiLayer.h  Interface.h  Preferences.h  Themes.h
engine/: main.cpp
engine/Core/: Debug.cpp  Debug.h  Input.cpp  Input.h
engine/Graphics/: Camera.cpp  Camera.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
engine/Rendering/: Renderer.cpp  Renderer.h
engine/Window/: Window.cpp  Window.h
examples/src/: CMakeLists.txt  main.cpp
res/shaders/: model.frag  model.vert  skybox.frag  skybox.vert
resources/: color_fragment.glsl
src/: Main.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/include/: Material.h  Mesh.h  Model.h  VertexBufferLayout.h
tests/src/: CMakeLists.txt  basic_fragment.glsl  basic_vertex.glsl  color_vertex.glsl  main.cpp
